// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<compat.native> "as" equals "div": as=div 1`] = `
<View
  accessibilityLabel="label"
  ref={[Function]}
  style={
    {
      "paddingHorizontal": 32,
    }
  }
/>
`;

exports[`<compat.native> "as" equals "img": as=img 1`] = `
<Image
  accessibilityLabel="label"
  ref={[Function]}
  srcSet="1x.img, 2x.img 2x"
  style={
    {
      "aspectRatio": "16/9",
    }
  }
/>
`;

exports[`<compat.native> "as" equals "input": as=input 1`] = `
<TextInput
  accessibilityLabel="label"
  onSelectionChange={[Function]}
  placeholderTextColor="green"
  ref={[Function]}
  secureTextEntry={true}
  style={{}}
/>
`;

exports[`<compat.native> "as" equals "span": as=span 1`] = `
<Text
  accessibilityLabel="label"
  numberOfLines={3}
  ref={[Function]}
  style={
    {
      "color": "blue",
      "overflow": "visible",
      "userSelect": "none",
    }
  }
/>
`;

exports[`<compat.native> "as" equals "textarea": as=textarea 1`] = `
<TextInput
  accessibilityLabel="label"
  multiline={true}
  numberOfLines={3}
  onSelectionChange={[Function]}
  ref={[Function]}
  style={{}}
/>
`;

exports[`<compat.native> default: default 1`] = `
<Pressable
  accessibilityLabel="label"
  ref={[Function]}
  style={
    {
      "paddingHorizontal": 32,
    }
  }
/>
`;

exports[`<compat.native> nested: nested 1`] = `
<View
  accessibilityLabel="label"
  ref={[Function]}
  style={{}}
>
  <Text
    ref={[Function]}
    style={
      {
        "boxSizing": "content-box",
        "color": "red",
        "overflow": "visible",
        "position": "static",
      }
    }
  >
    back to html
  </Text>
</View>
`;

exports[`<compat.native> styled: styled 1`] = `
<Pressable
  accessibilityLabel="label"
  ref={[Function]}
  style={
    [
      {
        "position": "absolute",
      },
      {
        "paddingHorizontal": 32,
      },
    ]
  }
/>
`;
